--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,15 +1,22 @@
 @page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registro";
+    
 }
+
+<link rel="stylesheet" href="/css/site.css">
+
+<body class="back">
+    
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
+
+<div class="row" >
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h4>Crea tu cuenta</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -27,7 +34,13 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Registrar</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
         </form>
     </div>
     <!-- 
@@ -61,7 +74,10 @@
             }
         </section>
     </div>-->
+    
+
 </div>
+</body>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
