--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,16 +2,27 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Iniciar Sesión";
 }
+<link rel="stylesheet" href="/css/site.css">
+<body class="back">
+    
 
-<h1>@ViewData["Title"]</h1>
+<h1 align="center">@ViewData["Title"]</h1>
+<hr />
 <div class="row">
     <div class="col-md-4">
+
+    </div>
+    <div class="col-md-4">   
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
+                
+                <div align="center">
+                <img
+                src="https://cdn-icons-png.flaticon.com/128/3135/3135715.png"
+                alt="" width="100" height="100">
+                </div>
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
@@ -36,13 +47,13 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Olvidé mi contraseña</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrar nuevo usuario</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar confirmación de email</a>
                     </p>
                 </div>
             </form>
@@ -80,7 +91,7 @@
         </section>
     </div>-->
 </div>
-
+</body>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
