--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,23 +1,129 @@
-@{
-    ViewData["Title"] = "About Us";
-}
-<h1>@ViewData["Title"]</h1>
+<!DOCTYPE html>
+<html lang="en"> 
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>ZonaBici</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link href="css/site.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+       
+        <header >
+            <div class="masthead-content">
+             
 
-<div class="container">
-    <div class="form-group">
-        <h2>Misión</h2>
-        <p>Acerca de nosotros</p>  
-    </div>
-    <div class="form-group">
-        <h2>Visión</h2>
-        <p>Acerca de nosotros</p>  
-    </div>
-    <div class="form-group">
-        <h2>Valores</h2>
-        <p>Acerca de nosotros</p>  
-    </div>
-    
+             
+             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+               <img src="~/img/slider1.jpg"  class="d-block w-100" alt="..." height="580">
+            
+            <div class="carousel-caption d-none d-md-block">
+              <h5><b>TIENDAS TOTALMENTE EQUIPADAS</b></h5>
+              <p>Contamos con todos los equipos y productos necesarios para el cliente</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+           <img src="~/img/slider2.jpg"  class="d-block w-100" alt="..." height="580">
+            <div class="carousel-caption d-none d-md-block">
+              <h5><b>APOYAMOS AL MEDIO AMBIENTE</b></h5>
+              <p>Brindamos productos que no causan daños a nuestro entorno</p>
+            </div>        </div>
+          <div class="carousel-item">
+            <img src="~/img/slider3.jpg"   class="d-block w-100" alt="..." height="580">
+            <div class="carousel-caption d-none d-md-block">
+              <h5><b>BRINDAMOS ATENCIÓN PERSONALIZADA</b></h5>
+              <p>Tenemos un personal con valores y con los conocimientos necesarios para recomendarte un producto de calidad</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+   </div>
 
+                </div>
+            </div>
+            <div class="bg-circle-1 bg-circle"></div>
+            <div class="bg-circle-2 bg-circle"></div>
+            <div class="bg-circle-3 bg-circle"></div>
+            <div class="bg-circle-4 bg-circle"></div>
+        </header>
+        
+        <section id="scroll">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="~/img/01.jpg" alt="..." /></div>
+                    </div>  
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5">
+                            <h2 class="display-4"> <b>MISIÓN</b></h2>
+                            <p>ZonaBici es la tienda modelo en Perú para la promoción de la bicicleta como medio de transporte habitual, seguro y sostenible, que contribuye a la mejora de la calidad de vida de la población y a un sistema social más justo.
 
-</div>
-
+ZonaBici  representa y defiende a las personas deportistas que utilizan la bicicleta como medio de transporte o de ocio, con el fin de lograr implementar medidas, normativas, infraestructuras y todo aquello que fomente la cultura de la bicicleta.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section>
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="~/img/02.jpg" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5">
+                            <h2 class="display-4"><b>VISIÓN</b></h2>
+                            <p>ZonaBici es una tienda proactiva en la promoción de la bicicleta, con reconocimiento e influencia, que representa los intereses de los y las ciclistas a nivel nacional y en cada uno de los territorios en los que tiene representación.Tenemos el objetivo de posicionarnos como la Tienda favorita a nivel Nacional y ser la tienda lider en mejor atención y calidad</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section>
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="~/img/03.jpg" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5">
+                            <h2 class="display-4"><b>VALORES</b></h2>
+                            <ul>
+                                <li> Seguridad:Promovemos el respeto de nuestros colaboradores hacia los clientes y eso está presente en todos nuestros procesos, operaciones y actividades.</li>                         
+                                <li> Honestidad:Actuamos de manera recta y proba, sin mentir, engañar u omitir la verdad ,dando productos de calidad.</li>
+                                <li>Laboriosidad: Sentimos pasión por nuestro trabajo; damos lo mejor de nosotros brindando la mejor atención y actuamos de manera eficiente, segura y responsable.</li>
+                                <li>Lealtad: Estamos comprometidos con nuestra empresa, misión, visión y valores. Somos parte de un mismo equipo.</li>
+                                          
+                        </ul>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
+      
+        <footer class="py-5 bg-black">
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ZONA BICI-LIMA,PERÚ</p></div>
+        </footer>      
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
