--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Iniciar Sesión";
 }
 <link rel="stylesheet" href="/css/site.css">
+
 <body class="back">
     
 
@@ -43,7 +44,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                 </div>
                 <div class="form-group">
                     <p>
