--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,34 +1,40 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
+
+<head class="">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PROYECTO_BICICLETAS</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+
+<body >
+    <header class=" back2">
+        <nav class="  navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3 ">
+            <div class="container ">
+                <a class="navbar-brand" href><img
+                src="https://static.vecteezy.com/system/resources/previews/001/192/394/non_2x/olympic-bike-race-png.png"
+                alt="" width="80" height="80"></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PROYECTO_BICICLETAS</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-dark " asp-area=""><strong>Catálogo</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" >Catálogo</a>
+                            <a class="nav-link text-dark" asp-area=""> <strong>Contacto</strong> </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" >Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About
+                                Us</strong></a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -52,4 +58,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
