--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<body class="back">
+<div class="container  ">
+    <div class="row">
+        <div class="col-6">
+            <img
+                src="https://www.pngjoy.com/pngl/185/3668743_merida-merida-logo-png-download.png"
+                width="400" height="200">
+        </div>    
+        <div class="col-6 ">
+            <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/SCOTT_LOGO_WHITE.jpg/1280px-SCOTT_LOGO_WHITE.jpg"
+                width="400" height="200">
+        </div>
+    </div> 
+    <p> </p>
+    <br><br>
+    <div class="row"> 
+        <div class="col-6">
+            <img
+                src="https://freepikpsd.com/media/2019/10/trek-logo-png-9-Transparent-Images.png"
+                width="400" height="200">
+        </div>
+        <div class="col-6">
+            <img
+                src="https://cdn.freebiesupply.com/logos/thumbs/2x/look-2-logo.png"
+                width="500" height="300">
+        </div>
+    </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+                
 </div>
+</body>
