--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head class="">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PROYECTO_BICICLETAS</title>
+    <title>@ViewData["Title"] - ZONABICI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href><img
                 src="https://static.vecteezy.com/system/resources/previews/001/192/394/non_2x/olympic-bike-race-png.png"
                 alt="" width="80" height="80"></a>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PROYECTO_BICICLETAS</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> ZONABICI</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - PROYECTO_BICICLETAS - <a asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
+            Copyright © ZONA BICI-LIMA,PERÚ <a asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
