--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,12 +22,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ">
+                   
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area=""><strong>Catálogo</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Index"><strong>Catálogo</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""> <strong>Contacto</strong> </a>
@@ -36,8 +37,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About
                                 Us</strong></a>
                         </li>
+                        <partial name="_LoginPartial" />
+                        <br>
+                        <partial name="_MenuPartial" />
                     </ul>
-                    <partial name="_LoginPartial" />
+                    
                 </div>
             </div>
         </nav>
