--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Index"><strong>Catálogo</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Catalogo"><strong>Catálogo</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""> <strong>Contacto</strong> </a>
