--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About
                                 Us</strong></a>
                         </li>
+                        <partial name="_MenuPartial" />
                         <partial name="_LoginPartial" />
                     </ul>
                     
