--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -13,65 +13,38 @@
 
 <body id="page-top " class="back">
 
-    <header>
-        <div class="masthead-content">
-
-
-
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
+    <br>
+     <div class="container">
+     <div class="row">
+         <div class="col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="~/img/slider1.jpg" class="d-block w-100" alt="..." height="580">
-
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5><b>TIENDAS TOTALMENTE EQUIPADAS</b></h5>
-                            <p>Contamos con todos los equipos y productos necesarios para el cliente</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/img/slider2.jpg" class="d-block w-100" alt="..." height="580">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5><b>APOYAMOS AL MEDIO AMBIENTE</b></h5>
-                            <p>Brindamos productos que no causan daños a nuestro entorno</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/img/slider3.jpg" class="d-block w-100" alt="..." height="580">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5><b>BRINDAMOS ATENCIÓN PERSONALIZADA</b></h5>
-                            <p>Tenemos un personal con valores y con los conocimientos necesarios para recomendarte un
-                                producto de calidad</p>
-                        </div>
-                    </div>
+                  <div class="carousel-item active">
+                    <img src="~/img/slider1.jpg" class="d-block w-100" alt="plantitas" width="620px" height="580px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="~/img/slider2.jpg" class="d-block w-100" alt="plantitas2" width="620px" height="580px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="~/img/slider3.jpg" class="d-block w-100" alt="plantitas3" width="620px" height="580px">
+                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
-
-        </div>
-        </div>
-        <div class="bg-circle-1 bg-circle"></div>
-        <div class="bg-circle-2 bg-circle"></div>
-        <div class="bg-circle-3 bg-circle"></div>
-        <div class="bg-circle-4 bg-circle"></div>
-    </header>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+                  </div>
+     </div>
 
     <section id="scroll">
         <div class="container px-5">
