--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                             <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Catalogo"><strong>Catálogo</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area=""> <strong>Contacto</strong> </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>Contacto</strong> </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacto"> <strong>About
                                 Us</strong></a>
                         </li>
                         <partial name="_LoginPartial" />
