--- a/Views/Producto/Catalogo.cshtml
+++ b/Views/Producto/Catalogo.cshtml
@@ -9,14 +9,25 @@
   <div class="row">
     @foreach (var item in Model)
    { 
-    <div class="col-sm">
-         
-       <img src="@item.Image" alt="" width="300px" height="300px">
-       <p class="text-center"> @Html.DisplayFor(modelItem => item.Name) </p> 
-       <p class="text-center">S/.@Html.DisplayFor(modelItem => item.Price)</p> 
-       <p class="text-center"> Stock:.@Html.DisplayFor(modelItem => item.Amout)</p> 
     
-    </div>
+    <div class="col-sm-4">
+                            <div class="card mb-3">
+                                <div class="card-body">
+                                    <div class="card-img-actions">
+                                        <img class="img-responsive" width="96" height="150" src="/images/@item.Image"
+                                        alt="@item.Image" />
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
+                                    <p class="card-text"> Stock:.@Html.DisplayFor(modelItem => item.Amout)</p> 
+                                    <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
+                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
+                                </div>
+                            </div>
+                        </div>
+
    
     }
  
