--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Catalogo"><strong>Catálogo</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Catalogo"><strong>Bicicletas</strong></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Accesorio" asp-action="Catalogo2"><strong>Accesorios</strong></a>
+                        </li>
+                         <li class="nav-item ">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Indumentaria" asp-action="Catalogo3"><strong>Indumentaria</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>Contacto</strong> </a>
