--- a/Views/Producto/Catalogo.cshtml
+++ b/Views/Producto/Catalogo.cshtml
@@ -1,9 +1,9 @@
 @model IEnumerable<PROYECTO_BICICLETAS.Models.Producto>
 
 @{
-    ViewData["Title"] = "Catalogo de Productos";
+    ViewData["Title"] = "Catalogo de Bicicletas";
 }
-<h1 style="text-align:center;">Catalogo de Productos</h1>
+<h1 style="text-align:center;">Catalogo de Bicicletas</h1>
 
 <div class="container">
   <div class="row">
