--- a/Views/Accesorio/Catalogo2.cshtml
+++ b/Views/Accesorio/Catalogo2.cshtml
@@ -20,8 +20,8 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                                    <p class="card-text"> Precio:.@Html.DisplayFor(modelItem => item.Price)</p>
-                                    <p class="card-text"> Stock:.@Html.DisplayFor(modelItem => item.Amout)</p> 
+                                    <p class="card-text"> Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
+                                    <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout)</p> 
                                     <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
                                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
                                 </div>
