--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,11 +41,10 @@
                             <a class="nav-link text-dark " asp-area="" asp-controller="Indumentaria" asp-action="Catalogo3"><strong>Indumentaria</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>Contacto</strong> </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About Us</strong> </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacto"> <strong>About
-                                Us</strong></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacto"> <strong>Contacto</strong></a>
                         </li>
                         <partial name="_LoginPartial" />
                     </ul>
