footer en layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewData["Title"] - ZONABICI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     
 </head>
 
@@ -59,11 +60,65 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            Copyright © ZONA BICI-LIMA,PERÚ <a asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
-        </div>
-    </footer>
+   <br>
+    <footer>
+    <div class="container,footer-content">
+      <div class="row">
+                    <div class="col-md-4" >
+                        <div class="b">
+                        <h1> <b>ZONA BICI</b> </h1>
+                        <a class="navbar-brand" href><img class="container"
+                src="~/img/rueda.png"
+                alt="" width="100" height="100"></a>
+                 <a class="navbar-brand" href><img class="container"
+                src="https://www.eltallerdebicicletas.cl/images/Logo-El-Taller_1.png"
+                alt="" width="100" height="100"></a>
+               
+                    <p>No importa donde estés, siempre vamos a engreirte con el producto que necesites. ¡Gracias por preferirnos!</p>
+                    </div>
+                    </div>
+                   
+                    <div class="col-md-4" >
+                         <h4>CONTÁCTANOS</h4>
+                            <div class="b">
+                            <b>Email</b>
+                            <br>
+                            ventas@zonabici.com.pe
+                            <br>
+                            <b> Whatsapp</b><br>
+                            (+51) 946 527 647
+                            <br>
+                            <b>Horario de atención</b> <br>
+                            Lunes a Viernes de  10:00 A.M. a 7:00 P.M.
+                            Sábados y domingos de 10:00 A.M. a 6:00 P.M.
+                            <br>
+                            <b>Dirección Oficina Central</b> <br>
+                            Av. la Molina 1167, La Molina 15024,Lima,Perú.
+                            </div>
+                    </div>
+                  <div class="col-md-4" >
+                         <h4>SOBRE NOSOTROS</h4>
+                            <div class="b">
+                            <a asp-controller="Home" asp-action="Index">Home</a>
+                            <br>
+                            <a asp-controller="Home" asp-action="Index">Nosotros</a>
+                            <br>
+                            <a asp-controller="Producto" asp-action="Registro">Registrarse</a>
+                            <br>
+                             <a asp-controller="Producto" asp-action="Catalogo">Catálogo</a>
+                             <br>
+                            <ul class="redes">
+                            <li><a href="https://www.facebook.com/" >  <i class="fa fa-facebook" width="100" height="100"></i></i></a></li>
+                            <li><a href="https://twitter.com/home"  > <i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.google.com/intl/es-419/gmail/about/"  > <i class="fa fa-google-plus"></i></a></li>
+                           </ul>
+                    </div>
+                    
+
+        </div>            
+    </div>
+  
+</footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
