--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,13 +69,7 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  /* nuevo */
+  margin: 0em auto 0em;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
-}
+
