--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -73,3 +73,33 @@ body {
   margin: 0em auto 0em;
 }
 
+
+
+footer{
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #0a0a0a;
+  align-items: center;
+  height: auto;
+  width: 100vw;
+  font-family:"Open Sans";
+  padding-top: 40px;
+  color: #FFFFFF;
+} 
+
+.footer-content{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.footer-content h4{
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+
