edit footer direccionamiento

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -101,9 +101,9 @@
                             <div class="b">
                             <a asp-controller="Home" asp-action="Index">Home</a>
                             <br>
-                            <a asp-controller="Home" asp-action="Index">Nosotros</a>
+                            <a asp-controller="Home" asp-action="About Us">Nosotros</a> 
                             <br>
-                            <a asp-controller="Producto" asp-action="Registro">Registrarse</a>
+                            <a asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
                             <br>
                              <a asp-controller="Producto" asp-action="Catalogo">Catálogo</a>
                              <br>
