--- a/Views/Indumentaria/Catalogo3.cshtml
+++ b/Views/Indumentaria/Catalogo3.cshtml
@@ -6,6 +6,15 @@
 }
 <h1 style="text-align:center;">Catalogo de Indumentaria</h1>
 
+<br>
+<nav aria-label="breadcrumb">
+  <ol class="nav">
+    <li class="breadcrumb-item"><a href="/Home/Index">Inicio</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Catalogo</li>
+  </ol>
+</nav>
+<br>
+
 <div class="container">
   <div class="row">
     @foreach (var item in Model)
