--- a/Views/Producto/Catalogo.cshtml
+++ b/Views/Producto/Catalogo.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "Catalogo de Bicicletas";
 }
 <h1 style="text-align:center;">Catalogo de Bicicletas</h1>
+<br>
+
+<nav aria-label="breadcrumb">
+  <ol class="nav">
+    <li class="breadcrumb-item"><a href="/Home/Index">Inicio</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Catalogo</li>
+  </ol>
+</nav>
+<br>
 
 <div class="container">
   <div class="row">
@@ -20,11 +29,11 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                                    <p class="card-text"> S/.@Html.DisplayFor(modelItem => item.Price)</p>
-                                    <p class="card-text">@Html.DisplayFor(modelItem => item.Categoria)</p>
-                                    <p class="card-text"> Stock:@Html.DisplayFor(modelItem => item.Amout)</p> 
-                                    <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
-                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
+                                    <p class="card-text">Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
+                                    <p class="card-text">Categoria: @Html.DisplayFor(modelItem => item.Categoria)</p>
+                                    <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout) unidades</p> 
+                                    <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Añadir</a>
+                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Detalle</a>
                                 </div>
                             </div>
                         </div>
