--- a/Views/Catalogo/Catalogo2.cshtml
+++ b/Views/Catalogo/Catalogo2.cshtml
@@ -1,10 +1,9 @@
-
-@model IEnumerable<PROYECTO_BICICLETAS.Models.Indumentaria>
+@model IEnumerable<PROYECTO_BICICLETAS.Models.Producto>
 
 @{
-    ViewData["Title"] = "Catalogo de Indumentaria";
+    ViewData["Title"] = "Catalogo de Accesorios";
 }
-<h1 style="text-align:center;">Catalogo de Indumentaria</h1>
+<h1 style="text-align:center;">Catalogo de Accesorios</h1>
 
 <br>
 <nav aria-label="breadcrumb">
@@ -31,9 +30,9 @@
                                 <div class="card-body">
                                     <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
                                     <p class="card-text"> Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
-                                    <p class="card-text"> Stock:@Html.DisplayFor(modelItem => item.Amout)</p> 
-                                    <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
-                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
+                                    <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout)</p> 
+                                    <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Añadir</a>
+                                    <a class="btn btn-info" asp-action="Details2" asp-route-id="@item.Id">Detalle</a>
                                 </div>
                             </div>
                         </div>
@@ -42,3 +41,5 @@
     }
  
 </div>
+
+    
