--- a/Views/Catalogo/Details2.cshtml
+++ b/Views/Catalogo/Details2.cshtml
@@ -8,7 +8,7 @@
 <nav aria-label="breadcrumb">
   <ol class="nav">
     <li class="breadcrumb-item"><a href="/Home/Index">Inicio</a></li>
-    <li class="breadcrumb-item"><a href="/Producto/Catalogo">Catálogo</a></li>
+    <li class="breadcrumb-item"><a href="/Catalogo/Catalogo2">Catálogo</a></li>
     <li class="breadcrumb-item active" aria-current="page">Detalle</li>
   </ol>
 </nav>
