--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -13,6 +13,11 @@
   </ol>
 </nav>
 <br>
+<br>
+<br>
+
+
+ <h1>@ViewData["Message"]</h1>
 
 <div class="container">
   <div class="row">
@@ -48,4 +53,3 @@
   
 
   
- 
