--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,19 +33,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="Producto" asp-action="Catalogo"><strong>Bicicletas</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Catalogo" asp-action="Catalogo"><strong>Bicicletas</strong></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="Accesorio" asp-action="Catalogo2"><strong>Accesorios</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Catalogo" asp-action="Catalogo2"><strong>Accesorios</strong></a>
                         </li>
                          <li class="nav-item ">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="Indumentaria" asp-action="Catalogo3"><strong>Indumentaria</strong></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Catalogo" asp-action="Catalogo3"><strong>Indumentaria</strong></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs"> <strong>About Us</strong> </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacto"> <strong>Contacto</strong></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Proforma" asp-action="Index"> <strong>Carrito</strong></a>
                         </li>
                         <partial name="_LoginPartial" />
                     </ul>
