--- a/Views/Catalogo/Details.cshtml
+++ b/Views/Catalogo/Details.cshtml
@@ -1,4 +1,4 @@
-@model PROYECTO_BICICLETAS.Models.Accesorio
+@model PROYECTO_BICICLETAS.Models.Producto
 
 @{
     ViewData["Title"] = "Detalle";
@@ -8,7 +8,7 @@
 <nav aria-label="breadcrumb">
   <ol class="nav">
     <li class="breadcrumb-item"><a href="/Home/Index">Inicio</a></li>
-    <li class="breadcrumb-item"><a href="/Accesorio/Catalogo2">Catálogo</a></li>
+    <li class="breadcrumb-item"><a href="/Catalogo/Catalogo">Catálogo</a></li>
     <li class="breadcrumb-item active" aria-current="page">Detalle</li>
   </ol>
 </nav>
@@ -26,7 +26,7 @@
                   <h4 class="card-title">@Html.DisplayFor(model => model.Name)</h4>
                   <br>
                   <p>Sea el primero en dejar una reseña para este artículo</p>
-                  <h5 class="card-title">Precio: S/.@Html.DisplayFor(model => model.Price)</h5>
+                  <h5 class="card-title">Precio: S/. @Html.DisplayFor(model => model.Price)</h5>
               
              
                   <a class="btn btn-primary" asp-action="Add" asp-route-id="Id">Añadir al Carrito</a>
@@ -45,7 +45,6 @@
              <h4>Caraterísticas</h4>
                   <p class="card-text"> @Html.DisplayFor(model => model.Descripcion)</p>
             </div>
-
             <br>
             <br>
             <br>
