--- a/Views/Catalogo/Details3.cshtml
+++ b/Views/Catalogo/Details3.cshtml
@@ -1,4 +1,4 @@
-@model PROYECTO_BICICLETAS.Models.Indumentaria
+@model PROYECTO_BICICLETAS.Models.Producto
 
 @{
     ViewData["Title"] = "Detalle";
@@ -8,7 +8,7 @@
 <nav aria-label="breadcrumb">
   <ol class="nav">
     <li class="breadcrumb-item"><a href="/Home/Index">Inicio</a></li>
-    <li class="breadcrumb-item"><a href="/Indumentaria/Catalogo3">Catálogo</a></li>
+    <li class="breadcrumb-item"><a href="/Catalogo/Catalogo3">Catálogo</a></li>
     <li class="breadcrumb-item active" aria-current="page">Detalle</li>
   </ol>
 </nav>
@@ -17,7 +17,7 @@
             <div class="col-md-6">
               
                   <div class="card-img-actions" align="center">
-                    <img class="img-responsive" width="490" height="500"
+                    <img class="img-responsive" width="590" height="600"
                        src="/img/@Html.DisplayFor(model => model.Image)" alt="@Html.DisplayFor(model => model.Image)"  />
                   </div>
             </div>
@@ -26,7 +26,7 @@
                   <h4 class="card-title">@Html.DisplayFor(model => model.Name)</h4>
                   <br>
                   <p>Sea el primero en dejar una reseña para este artículo</p>
-                  <h5 class="card-title">Precio: S/.@Html.DisplayFor(model => model.Price)</h5>
+                  <h5 class="card-title">Precio: S/. @Html.DisplayFor(model => model.Price)</h5>
               
              
                   <a class="btn btn-primary" asp-action="Add" asp-route-id="Id">Añadir al Carrito</a>
