--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -42,7 +42,8 @@
                 @Html.DisplayFor(modelItem => item.Producto.Name)
             </td>
             <td>
-                 
+                 <img class="img-responsive" width="90" height="100" src="/img/@item.Image"
+                                        alt="@item.Image" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cantidad)
